# Graphics-Project

CMP3060 Project - Student Version - Linux/: CMakeLists.txt
CMP3060 Project - Student Version - Linux/assets/models/: Cape.mtl  Key.mtl  Pennywise.mtl  Zombie.mtl  bride.mtl  bridge.mtl  door.mtl  monster.mtl
CMP3060 Project - Student Version - Linux/assets/shaders/: checkerboard.frag  color-mixer.frag  light.frag  light.vert  textured.frag  transform-test.vert  triangle.vert
CMP3060 Project - Student Version - Linux/assets/shaders/postprocess/: chromatic-aberration.frag  haunted-fog.frag  radial-blur.frag  vignette.frag
CMP3060 Project - Student Version - Linux/config/: app.jsonc
CMP3060 Project - Student Version - Linux/source/: main.cpp
CMP3060 Project - Student Version - Linux/source/common/: application.cpp
CMP3060 Project - Student Version - Linux/source/common/components/: camera.cpp  collision.cpp  collision.hpp  component-deserializer.hpp  health-controller.cpp  health-controller.hpp  key-collected.cpp  key-collected.hpp  key.cpp  key.hpp  light.cpp  light.hpp  mesh-renderer.cpp  mesh-renderer.hpp  player-controller.cpp  player-controller.hpp  repeated-controller.cpp  repeated-controller.hpp
CMP3060 Project - Student Version - Linux/source/common/ecs/: entity.cpp  entity.hpp  transform.cpp  world.cpp  world.hpp
CMP3060 Project - Student Version - Linux/source/common/material/: material.cpp  material.hpp  pipeline-state.hpp
CMP3060 Project - Student Version - Linux/source/common/mesh/: mesh.hpp  vertex.hpp
CMP3060 Project - Student Version - Linux/source/common/shader/: shader.cpp  shader.hpp
CMP3060 Project - Student Version - Linux/source/common/systems/: collision.hpp  forward-renderer.cpp  forward-renderer.hpp  player-controller.hpp  repeated-controller.hpp
CMP3060 Project - Student Version - Linux/source/common/texture/: sampler.hpp  texture-utils.cpp  texture2d.hpp
CMP3060 Project - Student Version - Linux/source/states/: entity-test-state.hpp  game-over-state.hpp  menu-state.hpp  play-state.hpp  win-state.hpp
